--- a/main.css
+++ b/main.css
@@ -2,12 +2,13 @@
 
 :root {
     --color1: #eee;
-    --color2: rgba(128, 128, 128, 0.6);
+    --color2: rgb(128, 128, 128);
     --color3: #fff;
     --color4: #333;
     --color5: rgba(150, 150, 150, 0.6);
     --color6: rgba(255, 255, 255, 0.8);
     --filter1: invert(24%) sepia(6%) saturate(15%) hue-rotate(343deg) brightness(95%) contrast(92%);
+    --filter2: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 
 .dark-mode {
@@ -16,6 +17,7 @@
     --color3: #1E2A47;
     --color4: #0b0f16;
     --filter1: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    --filter2: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
     color: white;
 }
 
@@ -42,18 +44,31 @@ body {
     background-size: cover;
     width: 100%;
     font-size: 12px;
+    position: relative;
 }
 
 header {
     background-color: var(--color2);
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
+    z-index: 999;
+    border-bottom: 2px solid black;
 }
 
 header>div {
     font-size: 64px;
     color: white;
-    text-align: center;
+    text-align: left;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 
 .image-grid {
     margin: 0 auto;
@@ -93,7 +108,6 @@ header>div {
 #info1 {
     display: flex;
     justify-content: space-between;
-    /* flex-direction: column; */
 }
 
 #info11 {
@@ -229,8 +243,8 @@ header>div {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 30px 0 0 0;
-    filter: var(--filter1);
+    filter: var(--filter2);
+    margin-top: 8px;
 }
 
 .icons>div>img {
@@ -243,7 +257,23 @@ header>div {
 #moon-sun {
     width: 30px;
     height: 30px;
-    filter: var(--filter1);
+    filter: var(--filter2);
+}
+
+.grid-mode .image-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.grid-mode #mainPhoto {
+    width: 620px;
+    max-width: 100%;
+    height: 450px;
+}
+
+.grid-mode .image-grid>div {
+    width: 620px;
+    max-width: 100%;
 }
 
 @media (min-width:1650px) {
@@ -258,16 +288,62 @@ header>div {
     }
 }
 
-.grid-mode .image-grid {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+@media (max-width:800px) {
+    .image-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    #mainPhoto {
+        width: 320px;
+        max-width: 100%;
+        height: 320px;
+    }
+
+    .image-grid>div {
+        width: 320px;
+        max-width: 100%;
+        margin: 20px auto;
+    }
+
+    .grid-btn {
+        display: none;
+    }
+
+    header>div {
+        font-size: 34px;
+        padding: 10px;
+        text-align: left;
+    }
+
+    #info1 {
+        flex-direction: column;
+    }
+
+    #lightBoxImg {
+        max-width: 350px;
+        max-height: 350px;
+    }
 }
-.grid-mode #mainPhoto{
-    width: 620px;
-    max-width: 100%;
-    height: 450px;
-}
-.grid-mode .image-grid>div{
-    width: 620px;
-    max-width: 100%;
+
+@media (max-width:320px) {
+
+    #mainPhoto {
+        width: 280px;
+        height: 270px;
+    }
+
+    .image-grid>div {
+        width: 280px;
+        margin: 10px auto;
+    }
+
+    header>div {
+        font-size: 30px;
+    }
+
+    #lightBoxImg {
+        max-width: 280px;
+        max-height: 280px;
+    }
+
 }
